// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChannelRecommendation renders correctly 1`] = `
<Fragment>
  <Spacer
    vertical="XL"
  >
    <Row
      align="centerBetween"
      bottom="XL"
      horizontal="L"
    >
      <H3>
        Recommended Channels
      </H3>
      <Row
        align="centerBoth"
      >
        <B2
          color="link"
          onPress={[Function]}
        >
          See more
        </B2>
        <MenuSheet
          items={
            Array [
              Object {
                "iconName": "close",
                "iconType": "material-community",
                "onPress": [Function],
                "title": "Remove from feed",
              },
            ]
          }
        >
          <Icon
            left="M"
            name="more"
            size="large"
          />
        </MenuSheet>
      </Row>
    </Row>
    <ChannelRecommendationItem
      channel={
        Object {
          "access_id": "2",
          "banned": "no",
          "blocked": false,
          "boostProPlus": false,
          "boost_autorotate": true,
          "boost_rating": "2",
          "briefdescription": "",
          "categories": Array [
            "music",
            "nature",
            "news",
            "politics",
            "science",
            "technology",
            "education",
            "art",
            "health",
          ],
          "chat": true,
          "city": "",
          "container_guid": "0",
          "deleted": "0",
          "disabled_boost": false,
          "dob": "",
          "eth_wallet": "0x6fffffdadae350ddd5a1777d5a1777a4f39f0317",
          "fb": false,
          "feature_flags": false,
          "featured_id": "725165605782560768",
          "founder": false,
          "gender": "private",
          "getAvatarSource": [MockFunction],
          "guid": undefined,
          "icontime": "1523515420",
          "impressions": 100,
          "language": "en",
          "legacy_guid": false,
          "mature": "1",
          "mature_channel": "0",
          "merchant": Object {
            "exclusive": Object {
              "amount": "10",
              "enabled": true,
            },
            "id": "acct_Dsdfjdlsaf34243",
            "service": "stripe",
          },
          "monetized": "",
          "name": "Some User",
          "owner_guid": "0",
          "pinned_posts": Array [],
          "plus": true,
          "programs": Array [
            "affiliate",
          ],
          "rating": "1",
          "rewards": true,
          "signup_method": false,
          "site_guid": false,
          "social_profiles": Array [],
          "spam": "0",
          "subscribed": false,
          "subscriber": true,
          "subscribers_count": 50,
          "subtype": false,
          "time_created": "1468113204",
          "time_updated": false,
          "type": "user",
          "username": "someusermane",
          "verified": true,
          "website": "",
          "wire_rewards": Object {
            "description": "",
            "rewards": Object {
              "money": Array [],
              "points": Array [],
            },
          },
        }
      }
      onSubscribed={[Function]}
    />
  </Spacer>
  <View
    style={
      Array [
        Object {
          "borderBottomWidth": 6,
        },
        Object {
          "borderColor": "#3f4b56",
        },
      ]
    }
  />
</Fragment>
`;

exports[`ChannelRecommendationItem renders correctly 1`] = `
<MPressable
  onPress={[Function]}
>
  <Row
    horizontal="L"
    vertical="S"
  >
    <withSpacer()
      right="M"
      size="tiny"
      top="XS"
    />
    <Column
      align="centerStart"
      flex={true}
      right="L"
    >
      <B1
        font="bold"
      >
        Some User
      </B1>
    </Column>
    <Subscribe
      channel={
        Object {
          "access_id": "2",
          "allow_comments": true,
          "banned": "no",
          "blocked": false,
          "boostProPlus": false,
          "boost_autorotate": true,
          "boost_rating": "2",
          "briefdescription": "",
          "canary": false,
          "categories": Array [
            "music",
            "nature",
            "news",
            "politics",
            "science",
            "technology",
            "education",
            "art",
            "health",
          ],
          "chat": true,
          "city": "",
          "confirmEmail": [Function],
          "container_guid": "0",
          "deleted": "0",
          "disable_autoplay_videos": undefined,
          "disabled_boost": false,
          "dob": "",
          "email_confirmed": false,
          "eth_wallet": "0x6fffffdadae350ddd5a1777d5a1777a4f39f0317",
          "fb": false,
          "feature_flags": false,
          "featured_id": "725165605782560768",
          "founder": false,
          "gender": "private",
          "getAvatarSource": [MockFunction] {
            "calls": Array [
              Array [
                "medium",
              ],
            ],
            "results": Array [
              Object {
                "type": "return",
                "value": undefined,
              },
            ],
          },
          "groupsCount": 0,
          "guid": undefined,
          "icontime": "1523515420",
          "impressions": 100,
          "isOwner": [Function],
          "is_admin": false,
          "language": "en",
          "last_accepted_tos": 0,
          "legacy_guid": false,
          "mature": "1",
          "mature_channel": "0",
          "mature_visibility": false,
          "merchant": Object {
            "exclusive": Object {
              "amount": "10",
              "enabled": true,
            },
            "id": "acct_Dsdfjdlsaf34243",
            "service": "stripe",
          },
          "mode": 0,
          "monetized": "",
          "name": "Some User",
          "nsfw": Array [],
          "onchain_booster": 0,
          "owner_guid": "0",
          "pending_subscribe": false,
          "permissions": Object {},
          "pinned_posts": Array [],
          "plus": true,
          "plus_method": "tokens",
          "pro": false,
          "pro_method": "tokens",
          "programs": Array [
            "affiliate",
          ],
          "rating": "1",
          "rewards": true,
          "signup_method": false,
          "site_guid": false,
          "social_profiles": Array [],
          "spam": "0",
          "subscribed": false,
          "subscriber": true,
          "subscribers_count": 50,
          "subscriptions_count": 0,
          "subtype": false,
          "tags": Array [],
          "time_created": "1468113204",
          "time_updated": false,
          "type": "user",
          "urn": "",
          "username": "someusermane",
          "verified": true,
          "website": "",
          "wire_rewards": Object {
            "description": "",
            "rewards": Object {
              "money": Array [],
              "points": Array [],
            },
          },
        }
      }
      mini={true}
      shouldUpdateFeed={false}
    />
  </Row>
</MPressable>
`;
